welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:3: error: not found: type Color
	var c:Color= Color.red;
              ^MethodsDogHouse:3: error: not found: value Color
	var c:Color= Color.red;
                     ^