welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse() {
	var c:Color= Color.red;
     baisseBrosse(); 
     setCouleurBrosse(c) ;
     for(i<-0 to 2) { avance(); }
	gauche();
	for(i<-0 to 2) { avance(); }
	gauche();
	for(i<-0 to 2) { avance(); }
}




